Rename ByteStash to CodeHub in manifest.json

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ByteStash",
-  "name": "ByteStash is a code snippet storage solution",
+  "short_name": "CodeHub",
+  "name": "CodeHub is a code snippet storage solution",
   "icons": [
     {
       "src": "favicon.ico",
