Rename project from bytestash to codehub

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bytestash",
+  "name": "codehub",
   "description": "A React and node.js app that stores code snippets",
-  "author": "Jordan Dalby",
+  "author": "Stambol Dev",
   "version": "1.0.0",
   "main": "server/app.js",
   "scripts": {
